--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -1,5 +1,5 @@
 ﻿<p class="text-info">
-   <b><marquee> <h1>HAPPY SHOPPING</h1> </b></marquee><br />
+   <b><marquee> <h1>HAPPY SHOPPINGss</h1> </b></marquee><br />
    For Queries Contact<br>
    <b>Name:</b> Sowmiya.B
    <br> <b> Email-id:</b> sowmi010201@gmail.com<br>
