--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -126,7 +126,7 @@
             </p>
         </div>
     </div>
-</div>
+</div><br>
  <section id="contact" class="content-section">
                 <div>
                   <center><h2 id="demo"></h2>
