--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -1,10 +1,5 @@
-﻿<p class="text-info">
-   <b><marquee> <h1>HAPPY SHOPPING</h1> </b></marquee><br />
-   For Queries Contact<br>
-   <b>Name:</b> Sowmiya.B
-   <br> <b> Email-id:</b> sowmi010201@gmail.com<br>
-   <b>Contact:</b>8888899999<br>
-   
+<p class="text-info">
+   <b><marquee> <h1>HAPPY SHOPPING</h1> </b></marquee><br /> 
 </p>
  
                
@@ -127,17 +122,18 @@
         </div>
     </div>
 </div><br>
+<p class="text-info">
  <section id="contact" class="content-section">
                 <div>
                   <center><h2 id="demo"></h2>
-                  <h4 id="demo1"></h4></center>
+                     <h4 id="demo1"></h4></center></p>
  </div>
             </section>
 <script>
 var parser, xmlDoc;
 var text = "<products><price>" +
 "<title>Thanks for Visiting Us !!!</title>" +
-"<contact>Email : sowmi010201@gmail.com</contact>" +
+"<contact>Email : sowmi010201@gmail.com</contact>" +"<contact>Email : pds28112000@gmail.com</contact>"
 "</price></products>";
 
 parser = new DOMParser();
