--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -1,9 +1,6 @@
 <p class="text-info">
    <b><marquee> <h1>HAPPY SHOPPING</h1> </b></marquee><br /> 
-</p>
- 
-               
-
+</p>            
 <div class="container-fluid">
     <div class="row-fluid">
         <div class="span8">
@@ -132,7 +129,7 @@
 <script>
 var parser, xmlDoc;
 var text = "<products><price>" +
-"<title>Thanks for Visiting Us !!!</title>" +
+"<title><marquee>Thanks for Visiting Us !!!</marquee></title>" +
 "<contact>Email : sowmi010201@gmail.com</contact>" +"<contact>Email : pds28112000@gmail.com</contact>"
 "</price></products>";
 
