--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -5,7 +5,9 @@
     <div class="row-fluid">
         <div class="span8">
 
-          
+          <p class="text-info">
+             <b> <h1>YOUR CART</h1> </b></br> 
+</p>
             <table class="table table-bordered">
                 <tr class="well">
                     <td><b>Item</b></td>
