--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -131,7 +131,7 @@
 <script>
 var parser, xmlDoc;
 var text = "<products><price>" +
-"<marquee><title>Thanks for Visiting Us !!!</title></marquee>" +
+"<title>Thanks for Visiting Us !!!</title>" +
 "<contact>Email : sowmi010201@gmail.com</contact>" +"<contact>Email : pds28112000@gmail.com</contact>"
 "</price></products>";
 
