--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -125,9 +125,9 @@
  <section id="contact" class="content-section">
                 <div>
                   <center><h2 id="demo"></h2>
-                     <h4 id="demo1"></h4></center></p>
+                     <h4 id="demo1"></h4></center>
  </div>
-            </section>
+</section></p>
 <script>
 var parser, xmlDoc;
 var text = "<products><price>" +
