--- a/partials/shoppingCart.html
+++ b/partials/shoppingCart.html
@@ -132,7 +132,7 @@
 var parser, xmlDoc;
 var text = "<products><price>" +
 "<title>Thanks for Visiting Us !!!</title>" +
-"<contact>Email : sowmi010201@gmail.com</contact>" +"<contact>Email : pds28112000@gmail.com</contact>"
+"<contact>Email : sowmiya@gmail.com,priyadharshini@gmail.com</contact>"
 "</price></products>";
 
 parser = new DOMParser();
