--- a/partials/store.html
+++ b/partials/store.html
@@ -1,5 +1,5 @@
 ﻿<p class="text-info">
-   <marquee><b><h1>Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
+   <marquee><b><h1style="color:white">Experience a New World Of Organic Shopping of Fruits &Veggies</h1></b></br></marquee>
 <b>Buy farm fresh fruits and vegetables online at the best prices. Order your favourite fruits and vegetables at Farm2Kitchen</b></br>
 </p>
 
